[tool.poetry]
name = "oldaplib"
version = "0.3.30"
description = "Open Media Access Server Library (Linked Open Data middleware/RESTApi)"
authors = ["Lukas Rosenthaler <lukas.rosenthaler@unibas.ch>"]
license = "GNU Affero General Public License version 3"
readme = "README.md"

[tool.mkdocs]
plugins = ["mkdocs-material", "mkdocstrings"]

packages = [
    { include = "oldaplib" }
]

exclude = [
    "oldaplib/test",
    "oldaplib/testdata"
]

[tool.poetry.dependencies]
python = "^3.12"
pystrict = "^1.3"
requests = "^2.32.5"
rdflib = "^7.0.0"
pyshacl = "^0.30.1"
xmlschema = "^4.1.0"
isodate = "^0.7.2"
bcrypt = "==5.0.0"
mkdocs = "^1.5.3"
setuptools = "^80.9.0"
lazydocs = "^0.4.8"
mkdocstrings = "^0.30.0"
mkdocstrings-python = "^1.17.0"
pyjwt = "^2.8.0"
coverage = "^7.10.7"
validators = "^0.35.0"
mkdocs-material = "==9.6.21"
pymdown-extensions = "^10.10.2"
pyyaml = "^6.0.2"
yamale = "^6.0.0"
redis = "^6.4.0"
cloudpickle = "^3.1.1"
bump2version = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

#[tool.poetry.scripts]
#load_list = "oldaplib/apps/load_list:load_list"