[tool.poetry]
name = "oldaplib"
version = "0.4.11"
description = "Open Media Access Server Library (Linked Open Data middleware/RESTApi)"
authors = ["Lukas Rosenthaler <lukas.rosenthaler@unibas.ch>"]
license = "GNU Affero General Public License version 3"
readme = "README.md"

[tool.mkdocs]
plugins = ["mkdocs-material", "mkdocstrings"]

packages = [
    { include = "oldaplib" }
]

exclude = [
    "oldaplib/test",
    "oldaplib/testdata"
]

[tool.poetry.dependencies]
python = "^3.12"
pystrict = "^1.3"
requests = "^2.32.5"
rdflib = "^7.0.0"
pyshacl = "^0.30.1"
xmlschema = "^4.1.0"
isodate = "^0.7.2"
bcrypt = "==5.0.0"
mkdocs = "^1.5.3"
setuptools = "^80.9.0"
lazydocs = "^0.4.8"
mkdocstrings = "==1.0.1"
mkdocstrings-python = "==2.0.1"
pyjwt = "^2.8.0"
coverage = "^7.10.7"
validators = "^0.35.0"
mkdocs-material = "==9.7.1"
pymdown-extensions = "^10.10.2"
pyyaml = "^6.0.2"
yamale = "^6.0.0"
redis = "^6.4.0"
cloudpickle = "^3.1.1"
oldap-tools = "^0.1.2"
bump-my-version = "^1.2.7"



[tool.bumpversion]
current_version = "0.4.14"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = false
message = "Bump version: {current_version} → {new_version}"
moveable_tags = []
commit_args = ""
setup_hooks = []
pre_commit_hooks = []
post_commit_hooks = []
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

#[tool.poetry.scripts]
#load_list = "oldaplib/apps/load_list:load_list"