[project]
name = "oldaplib"
version = "0.6.6"
description = "Open Media Access Server Library (Linked Open Data middleware/RESTApi)"
authors = [
    { name = "Lukas Rosenthaler", email = "lukas.rosenthaler@unibas.ch" }
]
license = "AGPL-3.0-only"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "bcrypt ==5.0.0",
    "cloudpickle >=3.1.1,<4.0.0",
    "convertdate ==2.4.1",
    "isodate >=0.7.2,<0.8.0",
    "pyjwt >=2.8.0,<3.0.0",
    "pyshacl ==0.31.0",
    "pystrict >=1.3,<2.0",
    "pyyaml >=6.0.2,<7.0.0",
    "rdflib >=7.0.0,<8.0.0",
    "redis ==7.4.0",
    "requests >=2.32.5,<3.0.0",
    "shapely >=2.1.2,<3.0.0",
    "validators >=0.35.0,<0.36.0",
    "xmlschema >=4.1.0,<5.0.0",
    "yamale >=6.0.0,<7.0.0",
]

[tool.poetry]
packages = [
    { include = "oldaplib" }
]

exclude = [
    "oldaplib/test",
    "oldaplib/testdata"
]

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
lazydocs = "^0.4.8"
mkdocstrings = "==1.0.3"
mkdocstrings-python = "==2.0.3"
mkdocs-material = "==9.7.6"
pymdown-extensions = "^10.10.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
bump-my-version = "^1.2.7"
coverage = "^7.10.7"
setuptools = "==82.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.bumpversion]
current_version = "0.6.6"
commit = true
tag = true
tag_name = "v{new_version}"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "oldaplib/src/version.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'
